{
    "name": "MainAction",
    "maps": [
        {
            "name": "PlayerActions",
            "id": "c1880f2c-40b1-4b88-8252-49cf31f82feb",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "7d9839fb-445a-4251-a6ae-73f280a38c63",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": ""
                },
                {
                    "name": "MoveY",
                    "type": "Button",
                    "id": "7bba5146-db68-4b92-a7f2-07542d9598df",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateCam",
                    "type": "Value",
                    "id": "50dea2ff-939d-4436-9ce2-4032e42fff92",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ZoomCam",
                    "type": "Value",
                    "id": "31011c95-74bd-4b44-86a6-981de3e32832",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WSAD",
                    "id": "61e24043-fe43-4927-a2b6-a129da5366bf",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "07d47c9c-d7cd-4632-aa2a-df5232781498",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3e0599b2-c89d-4708-9e3f-e0ea3f12f19d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "357dd354-bd73-44d9-bd5a-9be1f35d8e42",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "46377395-67d9-4651-b29f-eb7bd0249441",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "MouseLR",
                    "id": "fa27308a-8906-4898-b1de-30f801f2e488",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveY",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "573f527a-e128-40c0-a556-474d7fb8ed2b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MoveY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "819a6f95-f01a-4d6c-8986-1ff7df977571",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MoveY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e5effaac-4238-44b5-bbe0-bc8facc053bd",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "RotateCam",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2acc67fc-d413-4f98-baf5-f3d9cb536d6c",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "PC",
                    "action": "ZoomCam",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "6004c70c-0596-4a16-92d8-c12f8e0762ad",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "1f96f770-c168-4519-94f7-a5d893bec8ed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ca0bb057-af27-4767-b877-7d28b9679757",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Mobile",
            "bindingGroup": "Mobile",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}